apps/app1/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  #replicas: 1
  selector:
      matchLabels:
        app: nginx  
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        #image: nginx:1.19.5
        #image: nginxdemos/hello
        image: caperiver/prueba:2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
