apps/app1/base/se.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-in-app1
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: app1
type: NodePort
