apps/app1/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app1
spec:
  rules:
  #- host: myservicea.foo.org
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-in-app1
            port:
              number: 80
  ingressClassName: nginx
